# sonets

./: .gitignore  CMakeLists.txt  README.md  calc_rhos.cpp  calc_sqrtcov_rec_1p.cpp  calc_sqrtcov_rec_2p.cpp  calc_stats_1p.cpp  calc_stats_1p.hpp  calc_stats_2p.cpp  calc_stats_2p.hpp  gen_mult_secorder.cpp  makefile  run_secorder.cpp  run_secorder_2p.cpp  secorder_rec_1p.cpp  secorder_rec_2p.cpp  secorder_rec_2p.hpp
src/: CMakeLists.txt  run_secorder.cpp  run_secorder_2p.cpp
src/lib/: calc_rhos.hpp  calc_sqrtcov_rec_2p.cpp  calc_sqrtcov_rec_2p.hpp  secorder_rec_1p.cpp  secorder_rec_1p.hpp  secorder_rec_2p.cpp
